# bootstrap-tolc-cmake

./: .gitignore  CMakeLists.txt  README.md  tolc.cmake
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: GithubHelpers.cmake
tests/: .gitignore  CMakeLists.txt
tests/include/Boot/: bootstrap.hpp
tests/src/Boot/: bootstrap.cpp
tools/: get_release_id.py
